# numerical-optimizers

./: README.md  environment.yml  pyproject.toml  setup.cfg
paper/: numerical_optimizers.tex  numerical_optimizers_pres.tex  task_paper.py
src/numerical_optimizers/analysis/: task_analysis.py
src/numerical_optimizers/data_management/: __init__.py  task_data_management.py
src/numerical_optimizers/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
